Added a Namespace Prefix/URI resolver.

--- a/src/test/resources/nlm-umls-service.properties
+++ b/src/test/resources/nlm-umls-service.properties
@@ -5,3 +5,4 @@ username=lexgrid
 password=lexgrid
 idleConnectionTestPeriod=3600
 preferredTestQuery=SELECT 1;
+namespaceServiceUrl=http://informatics.mayo.edu/cts2/services/bioportal-rdf/
