--- a/pom.xml
+++ b/pom.xml
@@ -59,6 +59,29 @@
 
 	<build>
 		<plugins>
+
+			<plugin>
+				<groupId>org.codehaus.mojo</groupId>
+				<artifactId>build-helper-maven-plugin</artifactId>
+				<version>1.4</version>
+				<executions>
+					<execution>
+						<id>add-clojure</id>
+						<phase>generate-sources</phase>
+						<goals>
+							<goal>add-resource</goal>
+						</goals>
+						<configuration>
+							<resources>
+								<resource>
+									<directory>${basedir}/src/main/clojure</directory>
+								</resource>
+							</resources>
+						</configuration>
+					</execution>
+				</executions>
+			</plugin>
+
 			<plugin>
 				<groupId>org.apache.felix</groupId>
 				<artifactId>maven-bundle-plugin</artifactId>
@@ -136,7 +159,7 @@
 							*;scope=compile|runtime;inline=false
 						</Embed-Dependency>
 						<Spring-Context>*;timeout:=60</Spring-Context>
-						<_exportcontents>*</_exportcontents>
+						<_exportcontents>!*</_exportcontents>
 						<_nouses>true</_nouses>
 					</instructions>
 				</configuration>
@@ -239,6 +262,18 @@
 			<groupId>fr.pilato.spring</groupId>
 			<artifactId>spring-elasticsearch</artifactId>
 			<version>0.0.2</version>
+		</dependency>
+
+		<dependency>
+			<groupId>org.clojure</groupId>
+			<artifactId>clojure</artifactId>
+			<version>1.3.0</version>
+		</dependency>
+
+		<dependency>
+			<groupId>clj-http</groupId>
+			<artifactId>clj-http</artifactId>
+			<version>0.5.0</version>
 		</dependency>
 
 		<dependency>
