Added a CUI property for Entities.

--- a/src/test/resources/nlm-umls-service.properties
+++ b/src/test/resources/nlm-umls-service.properties
@@ -1,8 +1,8 @@
 service.pid=edu.mayo.cts2.framework.plugin.service.nlm
-jdbcUrl=jdbc:mysql://bmidev4.mayo.edu:3307/ecis
-jdbcDriverClass=com.mysql.jdbc.Driver
-username=lexgrid
-password=lexgrid
+jdbcUrl=jdbc:hsqldb:mem:mydb_it
+jdbcDriverClass=org.hsqldb.jdbcDriver
+username=sa
+password=
 idleConnectionTestPeriod=3600
 preferredTestQuery=SELECT 1;
 namespaceServiceUrl=http://informatics.mayo.edu/cts2/services/bioportal-rdf/
