--- a/pom.xml
+++ b/pom.xml
@@ -60,7 +60,7 @@
 	<properties>
 		<forkMode>never</forkMode>
 	</properties>
-	
+
 	<build>
 		<plugins>
 			<plugin>
@@ -231,9 +231,15 @@
 		</dependency>
 
 		<dependency>
-			<groupId>org.hsqldb</groupId>
-			<artifactId>hsqldb</artifactId>
-			<version>2.2.8</version>
+			<groupId>gov.cdc.phinvads</groupId>
+			<artifactId>vocabservice-client</artifactId>
+			<version>2.0.0</version>
+		</dependency>
+
+		<dependency>
+			<groupId>com.caucho</groupId>
+			<artifactId>hessian</artifactId>
+			<version>3.1.3</version>
 		</dependency>
 
 		<dependency>
@@ -252,7 +258,6 @@
 			<artifactId>lift-json_2.8.1</artifactId>
 			<version>2.4</version>
 		</dependency>
-
 
 		<dependency>
 			<groupId>c3p0</groupId>
