--- a/pom.xml
+++ b/pom.xml
@@ -64,12 +64,43 @@
 	<build>
 		<plugins>
 			<plugin>
+				<groupId>org.apache.cxf</groupId>
+				<artifactId>cxf-codegen-plugin</artifactId>
+				<version>2.5.2</version>
+				<dependencies>
+					<dependency>
+						<groupId>xerces</groupId>
+						<artifactId>xercesImpl</artifactId>
+						<version>2.8.1</version>
+					</dependency>
+				</dependencies>
+
+				<executions>
+					<execution>
+						<id>generate-cxf-sources</id>
+						<phase>generate-sources</phase>
+						<configuration>
+							<wsdlOptions>
+								<wsdlOption>
+									<wsdl>http://ushik-stg.dcgroupinc.com/UshikQueryService/USHIK?wsdl</wsdl>
+								</wsdlOption>
+							</wsdlOptions>
+						</configuration>
+						<goals>
+							<goal>wsdl2java</goal>
+						</goals>
+					</execution>
+				</executions>
+			</plugin>
+
+
+			<plugin>
 				<groupId>org.codehaus.mojo</groupId>
 				<artifactId>build-helper-maven-plugin</artifactId>
 				<version>1.4</version>
 				<executions>
 					<execution>
-						<id>add-clojure</id>
+						<id>add-clojure-source</id>
 						<phase>generate-sources</phase>
 						<goals>
 							<goal>add-resource</goal>
@@ -85,6 +116,59 @@
 				</executions>
 			</plugin>
 
+			<plugin>
+				<groupId>org.codehaus.mojo</groupId>
+				<artifactId>build-helper-maven-plugin</artifactId>
+				<version>1.4</version>
+				<executions>
+					<execution>
+						<id>add-cxf-source</id>
+						<phase>generate-sources</phase>
+						<goals>
+							<goal>add-source</goal>
+						</goals>
+						<configuration>
+							<sources>
+								<source>${project.build.directory}/generated-sources/cxf</source>
+							</sources>
+						</configuration>
+					</execution>
+				</executions>
+			</plugin>
+			<plugin>
+				<groupId>org.scala-tools</groupId>
+				<artifactId>maven-scala-plugin</artifactId>
+				<version>2.15.2</version>
+				<executions>
+					<execution>
+						<id>scala-compile-first</id>
+						<phase>process-resources</phase>
+						<goals>
+							<goal>add-source</goal>
+							<goal>compile</goal>
+						</goals>
+					</execution>
+					<execution>
+						<id>scala-test-compile</id>
+						<phase>process-test-resources</phase>
+						<goals>
+							<goal>testCompile</goal>
+						</goals>
+					</execution>
+				</executions>
+			</plugin>
+			<plugin>
+				<groupId>org.apache.maven.plugins</groupId>
+				<artifactId>maven-compiler-plugin</artifactId>
+				<executions>
+					<execution>
+						<phase>compile</phase>
+						<goals>
+							<goal>compile</goal>
+						</goals>
+					</execution>
+				</executions>
+			</plugin>
 			<plugin>
 				<groupId>org.apache.felix</groupId>
 				<artifactId>maven-bundle-plugin</artifactId>
@@ -143,6 +227,11 @@
 							edu.mayo.cts2.framework.model.service.valueset,
 							edu.mayo.cts2.framework.model.service.valuesetdefinition,
 							edu.mayo.cts2.framework.service.provider,
+							gov.cdc.vocab.service,
+							gov.cdc.vocab.service.bean,
+							gov.cdc.vocab.service.constants,
+							gov.cdc.vocab.service.dto.input,
+							gov.cdc.vocab.service.dto.output,
 							*;resolution:=optional
 						</Import-Package>
 						<Embed-Transitive>true</Embed-Transitive>
@@ -162,7 +251,7 @@
 							*;scope=compile|runtime;inline=false
 						</Embed-Dependency>
 						<Spring-Context>*;timeout:=60</Spring-Context>
-						<_exportcontents>!*</_exportcontents>
+						<_exportcontents>!java.*,*</_exportcontents>
 						<_nouses>true</_nouses>
 					</instructions>
 				</configuration>
@@ -242,6 +331,8 @@
 			<version>3.1.3</version>
 		</dependency>
 
+
+
 		<dependency>
 			<groupId>commons-collections</groupId>
 			<artifactId>commons-collections</artifactId>
@@ -255,8 +346,14 @@
 
 		<dependency>
 			<groupId>net.liftweb</groupId>
-			<artifactId>lift-json_2.8.1</artifactId>
+			<artifactId>lift-json_2.9.1</artifactId>
 			<version>2.4</version>
+		</dependency>
+
+		<dependency>
+			<groupId>com.googlecode</groupId>
+			<artifactId>kryo</artifactId>
+			<version>1.04</version>
 		</dependency>
 
 		<dependency>
