--- a/pom.xml
+++ b/pom.xml
@@ -463,6 +463,11 @@
 			<scope>test</scope>
 		</dependency>
 
+		<dependency>
+			<groupId>net.sf.flexjson</groupId>
+			<artifactId>flexjson</artifactId>
+			<version>2.1</version>
+		</dependency>
 	</dependencies>
 
 	<repositories>
